--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,11 @@
 name = "sodium-biscuit"
 version = "0.1.0"
 edition = "2018"
+license = "Apache-2.0"
+description = "Example implementation for Biscuit tokens cryprtography"
+authors = ["Geoffroy Couprie <geoffroy.couprie@clever-cloud.com>"]
+homepage = "https://github.com/clevercloud/biscuit"
+repository = "https://github.com/clevercloud/biscuit-cryptography-example"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
